--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 	creating a PWA application. 
 </p> 
 
+<p>
+Now updated!!!
+</p>
+
 <script> 
 	// Script for Service Worker 
 	window.addEventListener('load', () => { 
