--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 
 <p>
 Now updated!!! And Again.
+
+See <a href="https://developer.mozilla.org/en-US/docs/Web/API/Service_Worker_API/Using_Service_Workers"> mdn web site</a> for yet better code.
 </p>
 
 <script> 
