--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 <body> 
 <h1 style="color: green;"> GeeksforGeeks</h1> 
 
+	<a href="./toto.html"> lien vers toto</a>	
+	
+	
 <p> 
 	This is a simple tutorial for 
 	creating a PWA application. 
