--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"> 
 <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
 
+<meta rel="stylesheet" media="screen and (max-width: 1280px)" href="petiteResolution.css"/>
 <!-- Title -->
 <title>PWA Tutorial</title> 
 
@@ -20,7 +21,7 @@
 </head> 
 
 <body> 
-<h1 style="color: green;"> GeeksforGeeks</h1> 
+<h1> GeeksforGeeks</h1> 
 
 	<a href="./toto.html"> lien vers toto</a>	
 	
