--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@ See <a href="https://developer.mozilla.org/en-US/docs/Web/API/Service_Worker_API
 	// Script for Service Worker 
 	window.addEventListener('load', () => { 
       		registerSW(); 
+
+          fetch('https://planning.univ-rennes1.fr/jsp/custom/modules/plannings/9EYlGR3a.shu', 
+                {
+                    mode: 'no-cors'
+                }
+          ).then(function(response){
+              console.log("done fetch")
+          });
     	}); 
   
     	// Register the Service Worker 
