ajout de la reponse

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ See <a href="https://developer.mozilla.org/en-US/docs/Web/API/Service_Worker_API
                     mode: 'no-cors'
                 }
           ).then(function(response){
-              console.log("done fetch")
+              console.log("done fetch " + response)
           });
     	}); 
   
