--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ See <a href="https://developer.mozilla.org/en-US/docs/Web/API/Service_Worker_API
 
           fetch('https://planning.univ-rennes1.fr/jsp/custom/modules/plannings/9EYlGR3a.shu', 
                 {
-                    mode: 'no-cors'
+                    mode: 'cors' //no-cors
                 }
           ).then(function(response){
               console.log("done fetch " + response)
