ajout de la reponse

--- a/index.html
+++ b/index.html
@@ -41,11 +41,14 @@ See <a href="https://developer.mozilla.org/en-US/docs/Web/API/Service_Worker_API
 	// Script for Service Worker 
 	window.addEventListener('load', () => { 
       		registerSW(); 
+          
+          var cors_api_url = 'https://cors-anywhere.herokuapp.com/';
+          var url = 'https://planning.univ-rennes1.fr/jsp/custom/modules/plannings/9EYlGR3a.shu'
+          var options = {
 
-          fetch('https://planning.univ-rennes1.fr/jsp/custom/modules/plannings/9EYlGR3a.shu', 
-                {
-                    mode: 'no-cors' //no-cors
-                }
+          }
+
+          fetch( cors_api_url + url
           ).then(function(response){
               return response.text();
           }).then(function(text){
