--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ See <a href="https://developer.mozilla.org/en-US/docs/Web/API/Service_Worker_API
 
             //console.log(text);
             var jCalData = ICAL.parse(text);
-            var vcalendar = new ICAL.Component(jcalData);
+            var vcalendar = new ICAL.Component(jCalData);
             var vevent = vcalendar.getFirstSubcomponent('vevent');
             var summary = vevent.getFirstPropertyValue('summary');
             console.log('Summary: ' + summary);
