--- a/index.html
+++ b/index.html
@@ -57,9 +57,11 @@ See <a href="https://developer.mozilla.org/en-US/docs/Web/API/Service_Worker_API
             //console.log(text);
             var jCalData = ICAL.parse(text);
             var vcalendar = new ICAL.Component(jCalData);
-            var vevent = vcalendar.getFirstSubcomponent('vevent');
-            var summary = vevent.getFirstPropertyValue('summary');
-            console.log('Summary: ' + summary);
+            var componentArray = vcalendar.getAllSubcomponents();
+            componentArray.foreach((item,index,array)=>{console.log(">>>" + index);});
+            //var vevent = vcalendar.getFirstSubcomponent('vevent');
+            //var summary = vevent.getFirstPropertyValue('summary');
+            //console.log('Summary: ' + summary);
           });
     	}); 
   
