--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@ See <a href="https://developer.mozilla.org/en-US/docs/Web/API/Service_Worker_API
             if(Array.isArray(vcalendar)) {
               console.log("         It's an array! ");
             }else{
-              console.log(ICAL.stringify(vcalendar));
+              console.log(vcalendar);
+              //console.log(ICAL.stringify(vcalendar));
             }
             var componentArray = vcalendar.getAllSubcomponents();
             componentArray.foreach((item,index,array)=>{console.log(">>>" + index);});
