nouvelle approche du fichier ical

--- a/index.html
+++ b/index.html
@@ -56,21 +56,39 @@ See <a href="https://developer.mozilla.org/en-US/docs/Web/API/Service_Worker_API
 
             //console.log(text);
             var jCalData = ICAL.parse(text);
+
+            let events = jCalData[2];
+            events.forEach(e => result.push(flattenEvent(e)));
+            console.log(events);
+            /*
             var vcalendar = new ICAL.Component(jCalData);
             if(Array.isArray(vcalendar)) {
               console.log("         It's an array! ");
             }else{
-              console.log(vcalendar.t);
-              console.log(ICAL.stringify(vcalendar.t));
+              console.log(vcalendar);
+              console.log(ICAL.stringify(vcalendar));
             }
             var componentArray = vcalendar.getAllSubcomponents();
             componentArray.foreach((item,index,array)=>{console.log(">>>" + index);});
+            */
+
+
             //var vevent = vcalendar.getFirstSubcomponent('vevent');
             //var summary = vevent.getFirstPropertyValue('summary');
             //console.log('Summary: ' + summary);
           });
     	}); 
   
+      function flattenEvent(e) {
+        let event = {};
+        for(let i=0;i<e[1].length;i++) {
+          let prop = e[1][i];
+          event[prop[0]] = prop[3];
+          //console.log('e',prop);
+        } 
+        return event;
+      }
+
     	// Register the Service Worker 
     	async function registerSW() { 
       		if ('serviceWorker' in navigator) { 
