--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ See <a href="https://developer.mozilla.org/en-US/docs/Web/API/Service_Worker_API
 
             //console.log(text);
             var jCalData = ICAL.parse(text);
-
+            let result = []
             let events = jCalData[1][2];
             events.forEach(e => result.push(flattenEvent(e)));
             console.log(events);
