--- a/index.html
+++ b/index.html
@@ -9,20 +9,26 @@
 
 <meta rel="stylesheet" media="screen and (max-width: 1280px)" href="petiteResolution.css"/>
 <!-- Title -->
-<title>Exercices JS</title> 
+<title>Exercices</title> 
 </head> 
 
 <body> 
-<h1>TP#1</h1> 
+
+<h2>HTML</h2> 
 <ul>
-<li><a href="./toto.html">JS #1</a></li>
+<li><a href="./HTML_TP_1/index.html">HTML #1</a></li>
 </ul>
+
+
+<h2>JS</h2> 
+<ul>
+<li><a href="./JS_TP_1/index.html">JS #1</a></li>
+</ul>
+
 
 	
 
 
-
-</p>
 
 <script> 
 	
