--- a/JS_TP_1/exo4/exo4.html
+++ b/JS_TP_1/exo4/exo4.html
@@ -6,6 +6,7 @@
 		<script type="text/javascript">
 			function init()
 			{
+				
 				canvas = document.getElementById('myCanvas');
 				for(i=1;i<10;i++)
 				{
@@ -42,9 +43,12 @@
 				for(objectToInspect = obj; objectToInspect !== null; objectToInspect = Object.getPrototypeOf(objectToInspect)){
     					console.log("[info] "+Object.getOwnPropertyNames(objectToInspect));
   				}
+
+
 				//==============
-				var ma voiture = new Voiture("Eagle", "Talon TSi", 1993);
+				var maVoiture = new Voiture('Eagle','Talon TSi', 1993);
 				//==============
+			
 				class Rectangle {
   					constructor(hauteur, largeur) {
     					this.hauteur = hauteur;
@@ -60,6 +64,7 @@
 				}
 				const carré = new Rectangle(10, 10);
 				console.log(carré.area);
+				
 			}
 		</script>
 	</head>
