--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <h2>JS</h2> 
 <ul>
 <li><a href="./JS_TP_1/index.html">JS #1</a></li>
+<li><a href="./JS_TP_2/index.html">JS #2</a></li>
 </ul>
 
 
