--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <ul>
 <li><a href="./JS_TP_1/index.html">JS #1</a></li>
 <li><a href="./JS_TP_2/index.html">JS #2</a></li>
+<li><a href="./JS_TP_3/index.html">JS #3</a></li>
 </ul>
 
 
