--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
 
 <h2>JS</h2> 
 <ul>
-<li><a href="./JS_TP_1/index.html">JS #1</a></li>
-<li><a href="./JS_TP_2/index.html">JS #2</a></li>
-<li><a href="./JS_TP_3/index.html">JS #3</a></li>
+<li><a href="./JS_TP_1/index.html">JS #1 : Basics</a></li>
+<li><a href="./JS_TP_2/index.html">JS #2 : Animation with objects </a></li>
+<li><a href="./JS_TP_3/index.html">JS #3 : HmlHttpRequest vs Fetch API</a></li>
+<li><a href="./JS_TP_4/index.html">JS #4 : Web Workers</a></li>
 </ul>
 
 
