added TP JS 5, local storage and PWA

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <li><a href="./JS_TP_2/index.html">JS #2 : Animation with objects </a></li>
 <li><a href="./JS_TP_3/index.html">JS #3 : HmlHttpRequest vs Fetch API</a></li>
 <li><a href="./JS_TP_4/index.html">JS #4 : Web Workers</a></li>
+<li><a href="./JS_TP_5/index.html">JS #5 : Local Storage, towards Progressive Web App</a></li>
 </ul>
 
 
