added JS 0 : what is the difference between innerHTML, textContent and innerText

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body> 
 
-<h2>HTML</h2> 
+<h2>HTML/CSS</h2> 
 <ul>
 <li><a href="./HTML_TP_1/index.html">HTML #1</a></li>
 </ul>
@@ -22,11 +22,12 @@
 
 <h2>JS</h2> 
 <ul>
-<li><a href="./JS_TP_1/index.html">JS #1 : Basics</a></li>
-<li><a href="./JS_TP_2/index.html">JS #2 : Animation with objects </a></li>
-<li><a href="./JS_TP_3/index.html">JS #3 : HmlHttpRequest vs Fetch API</a></li>
-<li><a href="./JS_TP_4/index.html">JS #4 : Web Workers</a></li>
-<li><a href="./JS_TP_5/index.html">JS #5 : Local Storage, towards Progressive Web App</a></li>
+<li><a href="./JS_TP_0/index.html">TP JS #0 : what's the difference ...</a></li>	
+<li><a href="./JS_TP_1/index.html">TP JS #1 : Basics</a></li>
+<li><a href="./JS_TP_2/index.html">TP JS #2 : Animation with objects </a></li>
+<li><a href="./JS_TP_3/index.html">TP JS #3 : HmlHttpRequest vs Fetch API</a></li>
+<li><a href="./JS_TP_4/index.html">TP JS #4 : Web Workers</a></li>
+<li><a href="./JS_TP_5/index.html">TP JS #5 : Local Storage, towards Progressive Web App</a></li>
 </ul>
 
 
