added MDN link for JS_0

--- a/JS_TP_0/index.html
+++ b/JS_TP_0/index.html
@@ -23,6 +23,8 @@ pleas, open your JS console.
 <div id="divD"></div>
 
 
+<p>See <a href="https://developer.mozilla.org/en-US/docs/Web/API/Node/textContent">this MDN page</a> for more details.</p>
+
 </body>
 
 
