--- a/JS_TP_1/index.html
+++ b/JS_TP_1/index.html
@@ -56,6 +56,8 @@ Observe the code of <a href="./exo5/exo5.html" target="_blank">this page</a>.
 Quelle est l'alternative (à favoriser) pour lier une action à un événement? Quels autres événements peuvent être récupérés? <br>
 What is the (better) alternate to <code>onclick</code> to link an event to a callback? Give some examples of catchable events.
 </p>
+<p>Soient 2 images de même taille. Proposez un code JS qui permette d'afficher l'une ou l'autre de ces images en cliquant simplement dessus.<br>
+Let be 2 images of equal size. What would be the JS code for toggling from one to an other by a simple click?</p>
 
 <h2>An audio player</h2>
 En vous inspirant de la <a href="https://developer.mozilla.org/fr/docs/Web/Guide/DOM/Events/evenement_medias">documentation MDN sur les événements média</a>, mettez en place un script JS qui permette de contrôler la lecture d'une archive audio (play, pause, stop). Ce contrôleur visualisera la progression de la lecture sous la forme d'un arc de cercle se fermant proportionnellement au temps de lecture restante.<br>
