--- a/JS_TP_5/index.html
+++ b/JS_TP_5/index.html
@@ -21,6 +21,10 @@ Elles proposent de conjuguer rapidité, fluidité et légèreté tout en permett
 Dans ce TP, j'aimerais vous emmener <b>vers</b> la création d'un PWA. Pour cela, vous passerez par plusieurs étapes. Vous n'irez peut être pas au bout : ce n'est pas grave. La PWA visée est un client qui permet de lire son emploi du temps même quand il n'y a pas de réseau.
 </p>
 <ul>
+	<li>Etape 0: D'abord, se familiariser avec l'<a href="https://developer.mozilla.org/fr/docs/Web/API/Web_Storage_API">API Web Storage</a> en lançant une fenêtre de prompt ayant pour but de collecter le nom de l'utilisateur (Hint : utiliser l'objet <a href="https://developer.mozilla.org/fr/docs/Web/API/Window/prompt">prompt</a>). Puis stockez le nom dans le localstorage. La valeur ainsi stockée sera affichée dans le titre de la page.</li>
+
+
+
 	<li>Etape 1 : Suivez et reproduisez le tutoriel MDN sur l'API Client Web Storage (<a href="https://developer.mozilla.org/fr/docs/Apprendre/JavaScript/Client-side_web_APIs/Client-side_storage#stocker_des_donn%C3%A9es_simples_%E2%80%94_web_storage">lien</a>). Vous généraliserez ce tutoriel créant une page sur laquelle il est possible de rentrer l'url de votre emploi du temps (pour INFO2 G1 TP1 https://planning.univ-rennes1.fr/jsp/custom/modules/plannings/4PnR2on8.shu) et de la conserver pour un usage ultérieur. </li>
 
 	<li>Etape 2: Suivez le tutoriel MDN sur l'API Client IndexedDb (<a href="https://developer.mozilla.org/fr/docs/Apprendre/JavaScript/Client-side_web_APIs/Client-side_storage#stocker_des_donn%C3%A9es_complexes_%E2%80%94_indexeddb">lien</a>).</li>
