--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <li><a href="./JS_TP_0/index.html">TP JS #0 : what's the difference ...</a></li>	
 <li><a href="./JS_TP_1/index.html">TP JS #1 : Basics</a></li>
 <li><a href="./JS_TP_2/index.html">TP JS #2 : Animation with objects </a></li>
-<li><a href="./JS_TP_3/index.html">TP JS #3 : HmlHttpRequest vs Fetch API</a></li>
+<li><a href="./JS_TP_3/index.html">TP JS #3 : Asynchronism with the <code>Fetch</code> API</a></li>
 <li><a href="./JS_TP_4/index.html">TP JS #4 : Web Workers</a></li>
 <li><a href="./JS_TP_5/index.html">TP JS #5 : Local Storage, towards Progressive Web App</a></li>
 </ul>
