--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head> 
 
 <body> 
-
+	<H1>Client Side</H1>
 <h2>HTML/CSS</h2> 
 <ul>
 <li><a href="./HTML_TP_1/index.html">HTML #1</a></li>
@@ -31,8 +31,18 @@
 <li><a href="./JS_TP_5/index.html">TP JS #5 : Local Storage, towards Progressive Web App</a></li>
 </ul>
 
-
+	<h1>Server Side</h1>
+	<h2>Advanced JS</h2>
+<ul>
+<li><a href="./AJS_TP_1/index.html">TP Advanced JS #1 : Modules</a></li>	
+<li><a href="./AJS_TP_2/index.html">TP Advanced JS #2 : Promises</a></li>	
+</ul>
 	
+	<h2>Node JS</h2>
+<ul>
+<li><a href="./Node_TP_1/index.html">TP NodeJS JS #1 : </a></li>	
+<li><a href="./Node_TP_2/index.html">TP NodeJS JS #2 : </a></li>	
+</ul>	
 
 
 
