--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 	
 	<h2>Node JS</h2>
 <ul>
-<li><a href="./Node_TP_1/index.html">TP NodeJS JS #1 : </a></li>	
-<li><a href="./Node_TP_2/index.html">TP NodeJS JS #2 : </a></li>	
+<li><a href="./Node_TP_1/">TP NodeJS JS #1 : </a></li>	
+<li><a href="./Node_TP_2/">TP NodeJS JS #2 : </a></li>	
 </ul>	
 
 
