--- a/Node_TP_1/index.html
+++ b/Node_TP_1/index.html
@@ -2,6 +2,12 @@
 <html>
 	<head>
 		<title>First steps with Node JS</title>
+		<link rel="stylesheet"
+      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/default.min.css">
+<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
+		<script>
+  			hljs.initHighlightingOnLoad();
+		</script>
 	</head>
 	<body>
 		Node.js® is an open-source, cross-platform JavaScript runtime environment.
@@ -129,6 +135,11 @@ const chalk = require('chalk');
 console.log(chalk.yellow('hi!'));
 </pre>
 </li>
+<li>To remove the chalk library, just use the following command
+<pre>
+[user@ENSSAT]$ npm uninstall chalk@4
+</pre>
+</li>
 </ol>
 
 
@@ -198,12 +209,12 @@ function sum(a, b) {
 module.exports = sum;
 </pre>
 	Then, create a file named <code>sum.test.js</code>. This will contain our actual test:
-<pre>
+<pre><code class="js">
 const sum = require('./sum');
 test('adds 1 + 2 to equal 3', () => {
 		expect(sum(1, 2)).toBe(3);
 });
-</pre>
+</code></pre>
 	Finally, run <code>npm test</code> and Jest will print this message:
 <pre>
 	PASS  ./sum.test.js
@@ -217,6 +228,13 @@ test('adds 1 + 2 to equal 3', () => {
 </pre>
  "Linters" are tools that perform static analysis on software in order to recognize and report adherence/non-adherence to some set of coding best practice.
 
+<h2>Deliver</h2>
+The Node Package Managment system can be used to ship your work. Just create an archive with your complete code but the <code>node-modules</code> directory and deliver it. The recipient just has to install it :
+<pre>
+[someOtheruser@ElseWhere]$ npm install
+added 164 packages from 583 contributors in 4.781s
+found 0 vulnerabilities	
+</pre>  
 
 <h2>Nice to Have</h2>
 <h3>the Progress package</h3>
