--- a/Node_TP_1/index.html
+++ b/Node_TP_1/index.html
@@ -33,11 +33,11 @@
 		The usual way to run a Node.js program is to run the globally available node command (once you install Node.js) and pass the name of the file you want to execute.
 
 If your main Node.js application file is <code>app.js</code>, you can call it by typing:
-<pre>
+<pre><code class="bash">
 [user@ENSSAT]$ node app.js
-</pre>
+</code></pre>
 If we run the node command without any script to execute or without any arguments, we start a REPL session, that is an interactiv shell.
-<pre>
+<pre><code class="bash">
 [user@ENSSAT]$ node
 >console.log('test')
 test
@@ -51,17 +51,17 @@ false
 2
 3
 undefined
-</pre>
+</code></pre>
 
 		<h2>How to debug and enhance your code?</h2>
 		There might be cases where it's useful to print the call stack trace of a function, maybe to answer the question how did you reach that part of the code? You can do so using <code>console.trace():</code>
-<pre>
+<pre><code class="js">
 const function2 = () => console.trace();
 const function1 = () => function2();
 function1();	
-</pre>
+</code></pre>
 		You can easily calculate how much time a function takes to run, using <code>time()</code> and <code>timeEnd()</code>
-<pre>
+<pre><code class="js">
 const doSomething = () => console.log('test');
 const measureDoingSomething = () => {
 		console.time('doSomething()');
@@ -70,11 +70,11 @@ const measureDoingSomething = () => {
 		console.timeEnd('doSomething()');
 };
 measureDoingSomething();	
-</pre>
+</code></pre>
 
 		<H2>A simple http server (from nodejs.com)</H2>
 		Once we have installed Node.js, let's build our first web server. Create a file named app.js containing the following contents:
-<pre>
+<pre><code class="js">
 //This code first includes the Node.js http module in its standard library.
 const http = require('http'); 
 
@@ -97,7 +97,7 @@ const server = http.createServer((req, res) => { //req and res are JS objects  c
 server.listen(port, hostname, () => {
   console.log(`Server running at http://${hostname}:${port}/`);
 });
-</pre>
+</code></pre>
 Now, run your web server typing <code>node app.js</code> command in your terminal. 
 Visit <code>http://localhost:3000</code> and you will see a message saying "Hello World".
 
@@ -113,32 +113,32 @@ Visit <code>http://localhost:3000</code> and you will see a message saying "Hell
 <p>The following steps show how you can use npm to download a package, save it into the project dependencies, and then require it in a Node application.
 <ol>
 <li>First create a directory for your new application and navigate into it:
-<pre>
+<pre><code class="bash">
 [user@ENSSAT]$ mkdir myapp
 [user@ENSSAT]$ cd myapp
-</pre></li>
+</code></pre></li>
 <li>Use the npm init command to create a package.json file for your application. This command prompts you for a number of things, including the name and version of your application and the name of the initial entry point file (by default this is index.js). For now, just accept the defaults:
-<pre>
+<pre><code class="bash">
 [user@ENSSAT]$ npm init
-</pre>
+</code></pre>
 If you display the package.json file (cat package.json), you will see the defaults that you accepted, ending with the license.
 </li>
 <li>Now install the <code>chalk</code> package in the <code>myapp</code> directory and save it in the dependencies list of your package.json file:
-<pre>
+<pre><code class="bash">
 [user@ENSSAT]$ npm install chalk@4
-</pre>
+</code></pre>
 The dependencies section of your <code>package.json</code> will now appear at the end of the package.json file and will include chalk.</li>
 <li>
 To use the Chalk library you call the require() function in your index.js file to include it in your application. Create this file now, in the root of the "myapp" application directory, and give it the following contents:
-<pre>
+<pre><code class="js">
 const chalk = require('chalk');
 console.log(chalk.yellow('hi!'));
-</pre>
+</code></pre>
 </li>
 <li>To remove the chalk library, just use the following command
-<pre>
+<pre><code class="bash">
 [user@ENSSAT]$ npm uninstall chalk@4
-</pre>
+</code></pre>
 </li>
 </ol>
 
@@ -147,20 +147,20 @@ console.log(chalk.yellow('hi!'));
 
 	<h2>Running tasks</h2>
 	You can start your app by calling node with the script in your command prompt:
-<pre>
+<pre><code class="bash">
 [user@ENSSAT]$ node index.js
-</pre>
+</code></pre>
 	<p>In addition to defining and fetching dependencies you can also define named scripts in your package.json files and call npm to execute them with the run-script command. This approach is commonly used to automate running tests and parts of the development or build toolchain.</p>
 	<p>
 		For example, to define a script to copy your app into a production folder and run automatically your app, we might add the following script block to our package.json file:
-<pre>
+<pre><code class="json">
 {
 		"scripts": {
 			"start": "node index.js",
 			"prod": "cp index.js prod/. && cd prod && node index.js"
 		}
 }	
-</pre>
+</code></pre>
 	</p>
 	
 	<h2>The development process</h2>
@@ -169,30 +169,30 @@ console.log(chalk.yellow('hi!'));
 	<h3>the nodemon package</h3>
 	The node command has to be re-executed in bash whenever there is a change in the application. To restart the application automatically, use the nodemon module.
 	You can install nodemon as a development dependency:
-<pre>
+<pre><code class="bash">
 [user@ENSSAT]$ npm i --save-dev nodemon
-</pre>
+</code></pre>
 	Run the application using the nodemon command followed by the application's file name:
-<pre>
+<pre><code class="bash">
 [user@ENSSAT]$ nodemon app.js
-</pre>
+</code></pre>
 	or, add a script into you <code>package.json</code> file.
-<pre>
+<pre><code class="json">
 {
 		"scripts": {
 			"start": "node app.js",
 			"nodemon": "nodemon app.js"
 		}
 }
-</pre>
+</code></pre>
 	and run <code>[user@ENSSAT]$ npm run nodemon</code>
 	<h3>the jest package</h3>
 	<a href="https://jestjs.io/">Jest</a> is a delightful JavaScript Testing Framework with a focus on simplicity.
-<pre>
+<pre><code class="bash">
 [user@ENSSAT]$ npm install --save-dev jest
-</pre>
+</code></pre>
 	Add the following section to your <code>package.json</code> file:
-<pre>
+<pre><code class="json">
 {
 		"scripts": {
 			"start": "node app.js",
@@ -200,14 +200,14 @@ console.log(chalk.yellow('hi!'));
 			"test": "jest"
 		}
 }
-</pre>
+</code></pre>
 	Let's get started by writing a test for a hypothetical function that adds two numbers. First, create a <code>sum.js</code> file:
-<pre>
+<pre><code class="js">
 function sum(a, b) {
 		return a + b;
 }
 module.exports = sum;
-</pre>
+</code></pre>
 	Then, create a file named <code>sum.test.js</code>. This will contain our actual test:
 <pre><code class="js">
 const sum = require('./sum');
@@ -216,31 +216,31 @@ test('adds 1 + 2 to equal 3', () => {
 });
 </code></pre>
 	Finally, run <code>npm test</code> and Jest will print this message:
-<pre>
+<pre><code class="bash">
 	PASS  ./sum.test.js
 	✓ adds 1 + 2 to equal 3 (5ms)
-</pre>
+</code></pre>
 
 	<h3>the eslint package</h3>
  To use the popular JavaScript Linting tool <a href="https://eslint.org/">ESLint</a> you would call npm as shown:
-<pre>
+<pre><code class="bash">
 [user@ENSSAT]$ npm install eslint --save-dev
-</pre>
+</code></pre>
  "Linters" are tools that perform static analysis on software in order to recognize and report adherence/non-adherence to some set of coding best practice.
 
 <h2>Deliver</h2>
 The Node Package Managment system can be used to ship your work. Just create an archive with your complete code but the <code>node-modules</code> directory and deliver it. The recipient just has to install it :
-<pre>
+<pre><code class="bash">
 [someOtheruser@ElseWhere]$ npm install
 added 164 packages from 583 contributors in 4.781s
 found 0 vulnerabilities	
-</pre>  
+</code></pre>  
 
 <h2>Nice to Have</h2>
 <h3>the Progress package</h3>
 	Progress is an awesome package to create a progress bar in the console. Install it using npm install progress<br>
 	This snippet creates a 10-step progress bar, and every 100ms one step is completed. When the bar completes we clear the interval.
-<pre>
+<pre><code class="js">
 const ProgressBar = require('progress');
 const bar = new ProgressBar(':bar', { total: 10 });
 const timer = setInterval(() => {
@@ -249,7 +249,7 @@ const timer = setInterval(() => {
 		clearInterval(timer);
 		}
 }, 100);	
-</pre>
+</code></pre>
 
 
 	</body>
